@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.35_02
   perl: 5.010
-generated_by: 'Module::Build version 0.351'
+generated_by: 'Module::Build version 0.3513'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +16,7 @@ name: Alien-BWIPP
 provides:
   Alien::BWIPP:
     file: lib/Alien/BWIPP.pm
-    version: 0.001
+    version: 0.002
 requires:
   English: 1.04
   File::ShareDir: 1.01
@@ -30,4 +30,4 @@ resources:
   bugtracker: http://github.com/daxim/Alien-BWIPP/issues
   license: http://www.opensource.org/licenses/mit-license.php
   repository: http://github.com/daxim/Alien-BWIPP
-version: 0.001
+version: 0.002
