@@ -1,6 +1,6 @@
 =encoding UTF-8
 
-Alien-BWIPP version 0.001 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+Alien-BWIPP version 0.002 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
 
 =head1 INSTALLATION
 
