@@ -15,13 +15,13 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eeea3455c8ae0efecc06246aeb0958b4777053b9 AUTHORS
-SHA1 5df4a1079b28eeec7660816a8493ae8ff2a41c4d Build.PL
-SHA1 8ce7373df54f5cfb0a3f580e9984fa5d9b10dc90 Changes
-SHA1 2efd64b5c8ad96d032cfd3010420a2ac2c06e4a6 MANIFEST
+SHA1 ff63bf59eb523a01bc6c8b03a9cad52d794f48a5 Build.PL
+SHA1 9056f36545971a5d032cf76e4893dd09a39d3dd6 Changes
+SHA1 c766f839f97e7f3ae03bcc908b94b9f3d0410038 MANIFEST
 SHA1 6bec347e8c5b2f364c6a22b120efe7aa9a6143ae MANIFEST.SKIP
-SHA1 2d8c47c294a6f2a05e3bbcd959edcf7f003c941f META.yml
-SHA1 be25b6ef659bca941fedc7b6c155d6c4b0b9ce77 README
-SHA1 3eaaf6a301d5b34ebc0109f874d66396d3ad1227 lib/Alien/BWIPP.pm
+SHA1 94b1f62771b1594e891e7da42c37d8d96024f09f META.yml
+SHA1 421708b52a36ce4137660ff20d023ca9945570b4 README
+SHA1 d848c03eea4da866a7b913f008122ae9f491a5c8 lib/Alien/BWIPP.pm
 SHA1 1aba56f7312b270c21d5a31b48550de78e67ba14 share/barcode.ps
 SHA1 ef00330634fa80ccba64d10a7363bbf15e7703e2 t/00-load.t
 SHA1 c65cd0e73eb625650ab125f8c1cdb7840be65459 t/10-generated-class.t
@@ -29,7 +29,7 @@ SHA1 29cc7bb905a8b910527053367d7ac62ed0583c89 t/10-interface.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAksdYJ0ACgkQFtlTdOX00Ho4XQCeJjPs0B8YNdTNriWo2lxHgP6h
-w0QAnjrCkdkwh7KkVn+QiTpDjHk8+KpO
-=akgI
+iEYEARECAAYFAkshIBAACgkQFtlTdOX00HqIQACfVGi0n0SoDj+7LCiX+wLezqRb
+RAQAoJfxfgAoLQ2dVwEXpLoJjBF9Usio
+=kFZY
 -----END PGP SIGNATURE-----
